<resources>
    <string name="app_name">Pharmease</string>
    <string name="title_activity_maps">Pharmease</string>
    <string name="title">P H A R M E A S E</string>
    <string name="facebook_app_id">2895489153899420</string>
    <string name="fb_login_protocol_scheme">fb2895489153899420</string>



    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="my_profile">My Profile</string>
    <string name="all_pharmacies">All Pharmacies</string>
    <string name="my_order_history">My order history</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYnVzaHJhbWphZDE2IiwiYSI6ImNrYWJteXlnOTE4YWgyc210M2JzMTRmY3gifQ.2Wo4ncrrgVhq3invrft4Hg</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
